*Q: how is reflected in the dnssd txt record the fact that a connector has an udp port? I think that we always use tcp to init connections so this is not a real question
*should: make configurable (through Java and C++) the timeout for control queries
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers


1.1.1
r
        fix:  (API) added missing variable names on Local and Remote VariableListeners
        fix:  problem with avahi and big txt records (services with many variables)
        fix:  problem with jmdns and big txt records (services with many variables)
        fix:  can now safely listen to one variable multiple times with proper notification (was sending multiple notifications to each listener)
        impr: now queries complete service description only when needed (was basically asking to every service)
        impr: it is now possible for RemoteVariableChangeListener to unsubscribe itself when it is called back
        fix:  (gui) in case of subscription to remote variable changes, gui was not handling properly empty new value (it now does)

1.1.0
r2441
        fix:  default "class" variable value is now "Service" as intended
        fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
        fix:  service xml description now uses proper castor version
        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
        fix:  listener added before connectTo are now properly listening
        fix:  connectors peer id where wrongly generated in some cases
        impr: (API) minor change adding a ConnectionRefused exception on Service#connectTo
        impr: (API) added ServiceRepository class
        impr: (API) added Service#sendReplyToMessage methods
        impr: sensible performance improvement on high bandwidth message receptions
        impr: performance improvement on Service initialisation